# smo_svmpack

c/: AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  SMOSolver.h  config.h  config.status  configure  configure.ac  configure.scan  options.h  program_options.c  program_options.h  smo_solver.c  smo_solver.c~  smo_solver.h  smo_solver.h~  smo_solver_t.h  stopwatch.c  stopwatch.h  svm.h  svm.options  svm.out  svm_classify.c  svm_classify.h  svm_data.c  svm_data.h  svm_fun.c  svm_fun.h  svm_kernel_matrix.c  svm_kernel_matrix.h  svm_model.c  svm_options.c  svm_options.h  svm_utils.c  svm_utils.h  (+5 more)
c/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
c2/: AUTHORS  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile.am~  Makefile.in  config.h  config.h.in  config.status  configure  configure.scan  program_options.c  program_options.h  sed  stopwatch.c  stopwatch.h  svm.out  svm_fun.c  svm_model.h  svm_options.c  svm_utils.c  svm_utils.c~  svmtask
c2/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
c2/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  svm.out  svmtask
cpp/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile~  README  a9a  aer  as1  config.h.in  configure  configure.ac  lox  program_options.hpp  program_options.hpp~  putils.hpp  putils.hpp~  putils_c.c  putils_c.h  putils_cxx.hpp  putils_program_options.cpp  putils_program_options.hpp  sdf  smo_solver.cpp  smo_solver.hpp  smo_solver.hpp~  stopwatch.hpp  stopwatch.hpp~  svm.out  svm_classify.cpp  svm_classify.cpp~  svm_classify.hpp  svm_classify.hpp~  svm_data.cpp  svm_data.hpp  svm_edit.cpp  svm_kernel_matrix.hpp  svm_kernel_matrix.hpp.orig  (+20 more)
cpp/autom4te.cache/: output.1  output.2  requests  traces.1  traces.2  traces.3
cpp/bones/: llist.h  omp_ss.c  options.h  smo_solver.c  smo_solver.h  stopwatch.h  svm_classify.c  svm_classify.h  svm_kernel_matrix.c  svm_kernel_matrix.h  svm_options.c  svm_options.h  utils.c  utils.h
data/: a3a.tdo
